--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
 // Navigation code here
+.navbar{
+    width:100%;
+    padding: 15px 20%;
+    .flex-box(space-between, wrap);
+    background-color: @nav-bg;
+    h1{
+        font-size:3.5rem;
+        width:100%;
+        text-align: center;
+    }
+    nav{
+        width:60%;
+        .flex-box(space-between, nowrap);
+        padding: 1% 10%;
+        margin: auto;
+        font: @river-bend;
+        font-size: 1.5rem;
+    }
+}
