--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,3 +4,14 @@
     justify-content: @justify;
     flex-wrap: @wrap;
 }
+
+.button-style(@width, @height, @border-radius, @font-size){
+    width: @width;
+    height: @height;
+    border-radius: @border-radius;
+    font-size: @font-size;
+    background-color: @btn-bg-color;
+    text-align: center;
+    padding:10px 10px;
+    color: @porcelain;
+}
