added hover to button

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,4 +14,8 @@
     text-align: center;
     padding:10px 10px;
     color: @porcelain;
+    &:hover{
+        color: @btn-bg-color;
+        background-color: @porcelain;
+    }
 }
