--- a/css/index.css
+++ b/css/index.css
@@ -248,6 +248,10 @@ footer {
   padding: 10px 10px;
   color: #F6F7F8;
 }
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background-color: #F6F7F8;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
