--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,9 @@
 
     img{
       border-radius:10px;
+      @media @phone{
+        width:100%;
+      }
     }
 
     h2 {
@@ -22,12 +25,23 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    @media @phone{
+      .sky{
+        display: none;
+      }
+      .launch{
+        display: none;
+      }
+    }
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone{
+        width:90%;
+      }
     }
   }
 
@@ -50,8 +64,17 @@
     display: flex;
     justify-content: center;
 
+    @media @phone{
+      flex-direction: column-reverse;
+      padding: 20px 30px;
+      margin:auto;
+    }
+
     .walk-text {
       width: 50%;
+      @media @phone{
+        width:90%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -63,12 +86,19 @@
 
       .btn {
         .button-style(30%, 40px, 10px, 2rem);
+        @media @phone{
+          .button-style(100%, 50px, 5px, 2rem);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone{
+        width: 100%;
+        margin: 10px auto;
+      }
       
       img {
         width: 100%;
