added sign up popup

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -22,5 +22,9 @@
         @media @phone{
             width:100%;
         }
+        a{
+            text-decoration: none;
+            color: @main-font-color;
+        }
     }
 }
