--- a/css/index.css
+++ b/css/index.css
@@ -193,6 +193,10 @@ p {
     width: 100%;
   }
 }
+.navbar nav a {
+  text-decoration: none;
+  color: #5E6164;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -202,6 +206,14 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  /* Add styles to the form container */
+  /* Full-width input fields */
+  /* When the inputs get focus, do something */
+  /* Set a style for the submit button */
+  /* Add a red background color to the cancel button */
+  /* Add some hover effects to buttons */
 }
 .home .intro img {
   border-radius: 10px;
@@ -322,4 +334,53 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+.home .form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+.home .form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+.home .form-container h1 {
+  text-align: center;
+  font-size: 2rem;
+}
+.home .form-container input[type=text],
+.home .form-container input[type=text],
+.home .form-container input[type=text] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+.home .form-container input[type=text]:focus,
+.home .form-container input[type=text]:focus,
+.home .form-container input[type=text]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+.home .form-container .btn2 {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+}
+.home .form-container .cancel {
+  background-color: red;
+}
+.home .form-container .btn2:hover,
+.home .btn:hover {
+  opacity: 1;
 }
