--- a/less/home-page.less
+++ b/less/home-page.less
@@ -108,6 +108,7 @@
     }
   }
 
+  /* popup form */
   .form-popup {
     display: none;
     position: fixed;
@@ -117,7 +118,6 @@
     z-index: 9;
   }
   
-  /* Add styles to the form container */
   .form-container {
     max-width: 300px;
     padding: 10px;
@@ -128,7 +128,6 @@
     }
   }
   
-  /* Full-width input fields */
   .form-container input[type=text], .form-container input[type=text], .form-container input[type=text] {
     width: 100%;
     padding: 15px;
@@ -137,13 +136,11 @@
     background: #f1f1f1;
   }
   
-  /* When the inputs get focus, do something */
   .form-container input[type=text]:focus, .form-container input[type=text]:focus, .form-container input[type=text]:focus {
     background-color: #ddd;
     outline: none;
   }
   
-  /* Set a style for the submit button */
   .form-container .btn2 {
     background-color: #4CAF50;
     color: white;
@@ -155,13 +152,43 @@
     opacity: 0.8;
   }
   
-  /* Add a red background color to the cancel button */
   .form-container .cancel {
     background-color: red;
   }
   
-  /* Add some hover effects to buttons */
   .form-container .btn2:hover, .btn:hover {
     opacity: 1;
   }
+ 
 }// home
+
+.blog{
+  
+  .stars, .twinkling {
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    width:100%;
+    height:100%;
+    display:block;
+  }
+
+  .stars {
+    background: black url(../img/stars.JPG) repeat top center;
+    z-index:-5;
+  }
+
+  .twinkling{
+    background:transparent url(../img/twinkling2.png) repeat top center;
+    z-index:-1;
+
+    -moz-animation:move-twink-back 200s linear infinite;
+    -ms-animation:move-twink-back 200s linear infinite;
+    -o-animation:move-twink-back 200s linear infinite;
+    -webkit-animation:move-twink-back 200s linear infinite;
+    animation:move-twink-back 200s linear infinite;
+  }
+
+}
